--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
         }
     </script>
   </head>
-  <body>
-    <div class="h-screen bg-zinc-900 flex justify-center items-center">
+  <body class="h-screen bg-zinc-900 flex justify-center items-center overflow-hidden">
       <div class="flex flex-col md:flex-row">
         <div
           class="bg-zinc-800 px-4 py-4 rounded w-v80 sm:w-v40 md:w-p300"
@@ -50,6 +49,5 @@
           >
         </div>
       </div>
-    </div>
   </body>
 </html>
