--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lusory</title>
+    <!-- indigo-600 -->
+    <meta name="theme-color" content="#4F46E5" />
+    <meta property="og:title" content="lusory docs" />
+    <meta property="og:description" content="documentation for projects under lusory." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://docs.lusory.dev" />
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/87273500" />
+    <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/87273500"/>
+    <title>lusory</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
