--- a/index.html
+++ b/index.html
@@ -42,12 +42,26 @@
   <body class="h-screen bg-zinc-900 flex justify-center items-center overflow-hidden">
       <div class="flex flex-col md:flex-row">
         <div
-          class="bg-zinc-800 px-4 py-4 rounded w-v80 sm:w-v40 md:w-p300"
+          class="bg-zinc-800 px-4 py-4 rounded w-v80 my-3 md:my-0 md:mx-4 md:w-p300"
         >
           <h4 class="text-slate-100 text-2xl font-bold mb-2">relate</h4>
           <p class="text-slate-200 text-sm mb-2">
             a simple, unopinionated object mapper for Spring Data R2DBC, based
             on lc-spring-data-r2dbc.
+          </p>
+          <a
+            href="https://docs.lusory.dev/relate"
+            class="font-semibold text-slate-800 bg-green-400 px-5 items-center mt-2 flex rounded-sm text-sm justify-center hover:scale-105 transition-all"
+            style="padding-top: 4px; padding-bottom: 4px;"
+            >visit</a
+          >
+        </div>
+        <div
+          class="bg-zinc-800 px-4 py-4 rounded w-v80 my-3 md:my-0 md:mx-4 md:w-p300"
+        >
+          <h4 class="text-slate-100 text-2xl font-bold mb-2">toothpick</h4>
+          <p class="text-slate-200 text-sm mb-2">
+            a simple, lightweight dependency injection framework for JVM based languages
           </p>
           <a
             href="https://docs.lusory.dev/relate"
