--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             a simple, lightweight dependency injection framework for JVM based languages
           </p>
           <a
-            href="https://docs.lusory.dev/relate"
+            href="https://docs.lusory.dev/toothpick"
             class="font-semibold text-slate-800 bg-green-400 px-5 items-center mt-2 flex rounded-sm text-sm justify-center hover:scale-105 transition-all"
             style="padding-top: 4px; padding-bottom: 4px;"
             >visit</a
