--- a/index.html
+++ b/index.html
@@ -61,10 +61,24 @@
         >
           <h4 class="text-slate-100 text-2xl font-bold mb-2">toothpick</h4>
           <p class="text-slate-200 text-sm mb-2">
-            a simple, lightweight dependency injection framework for JVM based languages
+            a simple, lightweight dependency injection framework for JVM based languages.
           </p>
           <a
             href="https://docs.lusory.dev/toothpick"
+            class="font-semibold text-slate-800 bg-green-400 px-5 items-center mt-2 flex rounded-sm text-sm justify-center hover:scale-105 transition-all"
+            style="padding-top: 4px; padding-bottom: 4px;"
+            >visit</a
+          >
+        </div>
+        <div
+          class="bg-zinc-800 px-4 py-4 rounded w-v80 my-3 md:my-0 md:mx-4 md:w-p300"
+        >
+          <h4 class="text-slate-100 text-2xl font-bold mb-2">kframe</h4>
+          <p class="text-slate-200 text-sm mb-2">
+            a lightweight application framework for Kotlin.
+          </p>
+          <a
+            href="https://docs.lusory.dev/kframe"
             class="font-semibold text-slate-800 bg-green-400 px-5 items-center mt-2 flex rounded-sm text-sm justify-center hover:scale-105 transition-all"
             style="padding-top: 4px; padding-bottom: 4px;"
             >visit</a
